--- a/News(oc)/News(oc)/Base.lproj/Main.storyboard
+++ b/News(oc)/News(oc)/Base.lproj/Main.storyboard
@@ -351,7 +351,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="1" minY="0.0" maxX="1" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="conversationCell" rowHeight="187" id="6Hd-AA-ijj" customClass="ConversationTableViewCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="conversationCell" rowHeight="187" id="6Hd-AA-ijj" customClass="ConversationTableViewCell">
                                         <rect key="frame" x="0.0" y="28" width="600" height="187"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Hd-AA-ijj" id="1cY-ys-eJs">
@@ -364,11 +364,16 @@
                                                         <constraint firstAttribute="height" constant="25" id="QF4-v6-kmI"/>
                                                         <constraint firstAttribute="width" constant="25" id="yua-zg-UoK"/>
                                                     </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <real key="value" value="12.5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="753" verticalHuggingPriority="753" horizontalCompressionResistancePriority="753" verticalCompressionResistancePriority="753" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbu-UJ-Kuv">
-                                                    <rect key="frame" x="41" y="8" width="173" height="15"/>
+                                                    <rect key="frame" x="41" y="8" width="300" height="15"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="173" id="Rpp-v6-qL4"/>
+                                                        <constraint firstAttribute="width" constant="300" id="Rpp-v6-qL4"/>
                                                         <constraint firstAttribute="height" constant="15" id="oon-sy-tPB"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -384,23 +389,27 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="760" verticalHuggingPriority="760" horizontalCompressionResistancePriority="760" verticalCompressionResistancePriority="760" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRJ-L2-ptG">
+                                                    <rect key="frame" x="41" y="157" width="551" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <view contentMode="scaleToFill" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="Qvd-JD-FSN" customClass="ConversationView">
                                                     <rect key="frame" x="41" y="51" width="551" height="98"/>
                                                     <color key="backgroundColor" red="0.9865771812080526" green="0.98980180369127513" blue="0.94124895134228193" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="98" id="mqg-WW-QM8"/>
+                                                    </constraints>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWith">
                                                             <real key="value" value="0.5"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRJ-L2-ptG">
-                                                    <rect key="frame" x="41" y="157" width="551" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Qvd-JD-FSN" secondAttribute="bottom" constant="29" id="6vJ-eR-VLV"/>
                                                 <constraint firstAttribute="trailing" secondItem="Qvd-JD-FSN" secondAttribute="trailing" constant="8" id="7MH-5D-AeZ"/>
                                                 <constraint firstItem="6yZ-f4-v4P" firstAttribute="leading" secondItem="1cY-ys-eJs" secondAttribute="leading" constant="8" id="8nT-KE-FjL"/>
                                                 <constraint firstItem="b99-B4-J93" firstAttribute="top" secondItem="vbu-UJ-Kuv" secondAttribute="bottom" constant="8" id="AWW-ny-7I9"/>
@@ -409,7 +418,6 @@
                                                 <constraint firstItem="6yZ-f4-v4P" firstAttribute="top" secondItem="1cY-ys-eJs" secondAttribute="top" constant="8" id="aTc-7R-ooB"/>
                                                 <constraint firstItem="Qvd-JD-FSN" firstAttribute="leading" secondItem="1cY-ys-eJs" secondAttribute="leading" constant="41" id="iQp-5Z-szN"/>
                                                 <constraint firstItem="gRJ-L2-ptG" firstAttribute="leading" secondItem="1cY-ys-eJs" secondAttribute="leading" constant="41" id="jh3-xI-Co5"/>
-                                                <constraint firstItem="gRJ-L2-ptG" firstAttribute="top" secondItem="Qvd-JD-FSN" secondAttribute="bottom" constant="8" id="kUy-h3-o1W"/>
                                                 <constraint firstItem="vbu-UJ-Kuv" firstAttribute="top" secondItem="1cY-ys-eJs" secondAttribute="top" constant="8" id="mzx-Y3-wRa"/>
                                                 <constraint firstItem="b99-B4-J93" firstAttribute="leading" secondItem="1cY-ys-eJs" secondAttribute="leading" constant="41" id="xJY-hW-rh0"/>
                                                 <constraint firstItem="vbu-UJ-Kuv" firstAttribute="leading" secondItem="6yZ-f4-v4P" secondAttribute="trailing" constant="8" id="zaG-9q-Nic"/>
@@ -419,9 +427,11 @@
                                         <connections>
                                             <outlet property="addressLabel" destination="b99-B4-J93" id="zca-aG-yQb"/>
                                             <outlet property="articleLabel" destination="gRJ-L2-ptG" id="PKL-k5-gh9"/>
+                                            <outlet property="bottomConstrait" destination="6vJ-eR-VLV" id="wIL-RK-X2o"/>
                                             <outlet property="nameButton" destination="vbu-UJ-Kuv" id="OYD-Lz-E26"/>
                                             <outlet property="potraitButton" destination="6yZ-f4-v4P" id="CXU-si-xrc"/>
                                             <outlet property="replyView" destination="Qvd-JD-FSN" id="6jS-Lw-h6c"/>
+                                            <outlet property="viewHeight" destination="mqg-WW-QM8" id="xcz-Wj-t2d"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="7QN-Mw-oCS">
