--- a/News(oc)/News(oc)/Base.lproj/Main.storyboard
+++ b/News(oc)/News(oc)/Base.lproj/Main.storyboard
@@ -285,7 +285,7 @@
         <!--Picture News Detail View Controller-->
         <scene sceneID="1hp-j8-p0M">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Chx-VU-CyH" customClass="PictureNewsDetailViewController" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" hidesBottomBarWhenPushed="YES" id="Chx-VU-CyH" customClass="PictureNewsDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KDS-SF-YJH"/>
                         <viewControllerLayoutGuide type="bottom" id="CCh-rp-qa5"/>
@@ -294,8 +294,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jXG-I2-yn7">
+                                <rect key="frame" x="0.0" y="325" width="600" height="180"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="CYw-iv-xc9"/>
+                                </constraints>
+                            </scrollView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tOa-Li-vgr">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="04A-4Y-gpi">
                                     <size key="itemSize" width="394" height="301"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -304,7 +311,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="picture_collection_cell" id="CF5-5z-nRl" customClass="PictureNewsDetailCollectionViewCell">
-                                        <rect key="frame" x="0.0" y="118" width="394" height="301"/>
+                                        <rect key="frame" x="0.0" y="125" width="394" height="301"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="394" height="301"/>
@@ -313,7 +320,7 @@
                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLF-vu-9uy">
                                                     <rect key="frame" x="0.0" y="0.0" width="394" height="301"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OTi-dW-oCz">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OTi-dW-oCz">
                                                             <rect key="frame" x="0.0" y="0.0" width="394" height="301"/>
                                                         </imageView>
                                                     </subviews>
@@ -347,11 +354,13 @@
                         <constraints>
                             <constraint firstItem="tOa-Li-vgr" firstAttribute="leading" secondItem="uhZ-X4-0bG" secondAttribute="leading" id="2B2-QT-J0f"/>
                             <constraint firstAttribute="trailing" secondItem="tOa-Li-vgr" secondAttribute="trailing" id="D97-HH-tTY"/>
-                            <constraint firstItem="tOa-Li-vgr" firstAttribute="top" secondItem="KDS-SF-YJH" secondAttribute="bottom" id="WOv-1T-g4Y"/>
+                            <constraint firstAttribute="trailing" secondItem="jXG-I2-yn7" secondAttribute="trailing" id="KWM-1R-HOU"/>
+                            <constraint firstItem="tOa-Li-vgr" firstAttribute="top" secondItem="KDS-SF-YJH" secondAttribute="bottom" constant="-64" id="WOv-1T-g4Y"/>
                             <constraint firstItem="CCh-rp-qa5" firstAttribute="top" secondItem="tOa-Li-vgr" secondAttribute="bottom" id="rWP-30-yOZ"/>
+                            <constraint firstItem="jXG-I2-yn7" firstAttribute="leading" secondItem="uhZ-X4-0bG" secondAttribute="leading" id="uKz-YO-oKA"/>
+                            <constraint firstItem="CCh-rp-qa5" firstAttribute="top" secondItem="jXG-I2-yn7" secondAttribute="bottom" constant="46" id="yHs-fy-NYZ"/>
                         </constraints>
                     </view>
-                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="tOa-Li-vgr" id="FD5-wA-gbF"/>
                     </connections>
